# llm-finetune-poc

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train.py
config/: mistral-7b.json  quick-test.json
scripts/: build.sh  launch_training_docker.sh  launch_training_venv.sh  watch_jobs.sh
src/llm_finetune_poc/: __init__.py  arguments.py  cli.py  elastic_callback.py  elastic_checkpoint.py  fault_tolerance.py  inference.py  train.py
terraform/: main.tf  terraform.tf  terraform.tfvars  terraform_backend_override.tf  variables.tf
terraform/modules/available_resources/: platform.tf  preset.tf  region.tf
terraform/modules/backups/: main.tf
terraform/modules/backups/templates/: k8up_schedule.yaml.tftpl
terraform/modules/backups_store/: main.tf
terraform/modules/cleanup/scripts/: disk_cleanup.sh
terraform/modules/k8s/: k8s_ng_accounting.tf  k8s_ng_controller.tf  k8s_ng_login.tf  k8s_ng_system.tf  k8s_ng_workers.tf  variables.tf
terraform/modules/monitoring/: main.tf
terraform/modules/monitoring/templates/dashboards/: update-dashboards.sh
terraform/modules/network-operator/: main.tf
terraform/modules/nfs-server/: disks.tf  main.tf  variables.tf
terraform/modules/nfs-server/files/: nfs-cloud-init.tftpl
terraform/modules/o11y/: main.tf
terraform/modules/slurm/: locals.tf  locals_active_checks.tf  main.tf  variables.tf
terraform/modules/slurm/scripts/: wait_for_flux_hr.sh.tmpl
terraform/modules/slurm/templates/helm_values/: cm_terraform_soperator_activechecks.yaml.tftpl  soperator_fluxcd.yaml.tftpl  (+1 more)
